@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<metadata>
+  <attr path="/api/namespace/struct[@cname='RsvgHandle']/method[@name='Write']/*/*[@name='buf']" name="array">1</attr>
+</metadata>
