@@ -1,3 +1,8 @@
+2004-03-30  Mike Kestner  <mkestner@ximian.com>
+
+	* rsvg/Makefile.am : apply metadata to api
+	* rsvg/Rsvg.metadata : mark an array param
+
 2004-03-29  Todd Berman  <tberman@sevenl.net>
 
 	* sample/Makefile.am: small resource build fix for glade-test.exe
